--- a/jabref.bib
+++ b/jabref.bib
@@ -8502,3 +8502,56 @@ year = {2000}
  publisher = theacm,
  OPTaddress = {New York, NY, USA},
 } 
+
+@article{Ghani:2005:MAG:1090189.1086403,
+ author = {Ghani, Neil and Johann, Patricia and Uustalu, Tarmo and Vene, Varmo},
+ title = {Monadic augment and generalised short cut fusion},
+ journal = {SIGPLAN Notices},
+ issue_date = {September 2005},
+ volume = {40},
+ number = {9},
+ OPTmonth = sep,
+ year = {2005},
+ issn = {0362-1340},
+ pages = {294--305},
+ numpages = {12},
+ OPTurl = {http://doi.acm.org/10.1145/1090189.1086403},
+ doi = {10.1145/1090189.1086403},
+ acmid = {1086403},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {augment, bind, build, monads, short cut fusion},
+} 
+
+@article{Atkey:2009:PNC:1561017.1561022,
+ author = {Atkey, Robert},
+ title = {Parameterised notions of computation},
+ shortjournal = {J. Funct. Program.},
+ journal = {Journal of Functional Programming},
+ issue_date = {July 2009},
+ volume = {19},
+ number = {3-4},
+ month = jul,
+ year = {2009},
+ issn = {0956-7968},
+ pages = {335--376},
+ numpages = {42},
+ OPTurl = {http://dx.doi.org/10.1017/S095679680900728X},
+ doi = {10.1017/S095679680900728X},
+ acmid = {1561022},
+ publisher = {Cambridge University Press},
+ OPTaddress = {New York, NY, USA},
+} 
+
+@article{CambridgeJournals:8240527,
+author = {Uustalu,Tarmo},
+title = {Generalizing Substitution},
+journal = {RAIRO - Theoretical Informatics and Applications},
+volume = {37},
+number = {04},
+pages = {315--336},
+year = {2003},
+doi = {10.1051/ita:2003022},
+optURL = {http://dx.doi.org/10.1051/ita:2003022},
+eprint = {http://journals.cambridge.org/article_S0988375403000225},
+}
