--- a/jabref.bib
+++ b/jabref.bib
@@ -3201,7 +3201,7 @@ publisher = theacm,
 @inproceedings{ConcHs,
  author = {Peyton Jones, Simon and Gordon, Andrew and Finne, Sigbjorn},
  title = {Concurrent {Haskell}},
- booktitle = {Proceedings of the 23rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ booktitle = {Proceedings of the 23\xrd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
  series = {POPL '96},
  year = {1996},
  isbn = {0-89791-769-3},
